--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   name: nginx
-  tag: stable-alpine3.17-slim
+  tag: latest
   repository: nginx
   pullpolicy: "Always"
 
